samples/_failures_safe/1761093332_80c0a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb247c75.c: In function ‘tokenize’:
./samples/SAFE/__tmp_eb247c75.c:168:9: error: expected expression at end of input
  168 |         tokens[token_count].value[
      |         ^~~~~~
./samples/SAFE/__tmp_eb247c75.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb247c75.c:168:9: error: expected declaration or statement at end of input
